--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /ejercicio_6/nbproject/private/
 /ejercicio_6/build/
 /ejercicio_7/nbproject/private/
+/ejercicio_8/nbproject/private/
+/ejercicio_8/build/
